--- a/requirements.txt
+++ b/requirements.txt
@@ -82,11 +82,12 @@ pillow==10.3.0 ; python_version >= "3.10" and python_version < "4.0"
 portalocker==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 preshed==3.0.9 ; python_version >= "3.10" and python_version < "4.0"
 protobuf==4.25.3 ; python_version >= "3.10" and python_version < "4.0"
+psutil==5.9.8 ; python_version >= "3.10" and python_version < "4.0"
 pyarrow==16.0.0 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.18.2 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.7.1 ; python_version >= "3.10" and python_version < "4.0"
 pydeck==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
-pygments==2.17.2 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
 pywin32==306 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
